2010-09-09  Murray Cumming  <murrayc@murrayc.com>

	Remove Item because it was removed from GTK+.

	* gtk/src/item.[hg|ccg]: Remove.
	* gtk/src/filelist.am: Remove mention of item.hg.
	* gtk/gtkmm.h: Remove mention of item.h.
	* gtk/src/menuitem.[hg|ccg]: Derive from Bin instead of Item, as now in 
	GTK+.

2010-09-06  Murray Cumming  <murrayc@murrayc.com>

	RadioAction: Added join_group().

	* gtk/src/radioaction.hg: Wrapped gtk_radio_action_join_group(), which
  avoids the need to ever see a *Group object.

2010-09-06  Murray Cumming  <murrayc@murrayc.com>

	IconInfo: Fix the build.

	* gtk/src/iconinfo.[hg|ccg]: Correct silly mistakes.

2010-09-06  Murray Cumming  <murrayc@murrayc.com>

	gtkmm: Remove the AnchorType enum

	* gtk/src/enums.hg: Remove AnchorType enum, not used by anything in gtkmm,
  because GtkAnchorType has been removed from GTK+.

2010-09-06  Murray Cumming  <murrayc@murrayc.com>

	gtkmm: Dialog: Remove use_separator parameters.

	* gtk/src/dialog.[hg|ccg]: Constructors: Remove the use_separator parameters
  that are already not used since the earlier commit.

2010-09-06  Murray Cumming  <murrayc@murraycc.com>>

	gtkmm: CellView: Add natural-size methods.

	* gtk/src/cellview.hg: Added get_desired_width_of_row() and
  get_desired_height_for_width_of_row().
	* gtk/src/filechooserbutton.hg: Remove the constructor that lets us set
  the backend, because the C function was removed. This was already not
  generated because it is no longer in the .defs, so this just avoids the
  gmmproc warning.

2010-09-04  Murray Cumming  <murrayc@murrayc.com>

	gtkmm: IconInfo, ProgressBar: Added new methods.

	* gtk/src/iconinfo.[hg|ccg]: Added load_icon_symbolic().
	* gtk/src/progressbar.hg: Added get/set_inverted() and get/set_show_text().

2010-09-04  Murray Cumming  <murrayc@murrayc.com>

	gdkmm: Window: Added new methods.

	* gdk/src/window.[hg|ccg]: Added set_device_cursor(), get_device_position(),