@@ -66,13 +66,13 @@ void unlock_path(const std::string& accel_path)
 
 bool lookup_entry(const Glib::ustring& accel_path, Gtk::AccelKey& key)
 {
-  GtkAccelKey gkey = {GDK_VoidSymbol, GdkModifierType (0), 0};
+  GtkAccelKey gkey = {GDK_KEY_VoidSymbol, GdkModifierType (0), 0};
   const bool known = gtk_accel_map_lookup_entry(accel_path.c_str(), &gkey);
 
   if(known)
     key = AccelKey(gkey.accel_key, Gdk::ModifierType (gkey.accel_mods));
   else
-    key = AccelKey(GDK_VoidSymbol, Gdk::ModifierType (0));
+    key = AccelKey(GDK_KEY_VoidSymbol, Gdk::ModifierType (0));
 
   return known;
 }
