@@ -1,5 +1,13 @@
 2010-09-09  Murray Cumming  <murrayc@murrayc.com>
 
+	Use GDK_KEY_VoidSymbol instead of GDK_VoidSymbol to fix the build. 
+
+	* gtk/gtkmm/accelkey.cc:
+	* gtk/gtkmm/accelmap.cc: Replace use of GDK_VoidSymbol with 
+	GDK_KEY_VoidSymbol, because it has changed in GTK+.
+
+2010-09-09  Murray Cumming  <murrayc@murrayc.com>
+
 	Remove Item because it was removed from GTK+.
 
 	* gtk/src/item.[hg|ccg]: Remove.
